@@ -22,7 +22,7 @@
 .runThisTest <- Sys.getenv("RunAllRcppTests") == "yes" && Sys.getenv("RunVerboseRcppTests") == "yes"
 
 if (! .runThisTest) exit_file("Set 'RunVerboseRcppTests' and 'RunAllRcppTests' to 'yes' to run.")
-if (.onWindow)      exit_file("Skipping on Windows.'")
+if (.onWindows)     exit_file("Skipping on Windows.'")
 
 #.client.package <- function(pkg = "testRcppPackage") {
 td <- tempfile()
